[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/barrierbear.png" type="Texture" id=1]
[ext_resource path="res://entities/Bearrier.gd" type="Script" id=2]
[ext_resource path="res://shaders/explode.shader" type="Shader" id=3]

[sub_resource type="Animation" id=8]
resource_name = "freeze"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 17, 18, 17, 18, 17, 18, 17, 18, 17, 18, 17, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "ouch"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 9, 3, 19 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "face_player"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "pushback"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 7, 8, 7, 8, 7, 8, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "face_player"
} ]
}

[sub_resource type="Animation" id=3]
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 0.9, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 3, 4, 5, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "turn_around"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "audio_step"
} ]
}

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 3 )
shader_param/timer = 0.0
shader_param/rate = 80.0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 1 )

[node name="Bearrier" type="KinematicBody2D" groups=[
"hurtful",
]]
position = Vector2( 1112, 704 )
script = ExtResource( 2 )

[node name="AniPlay" type="AnimationPlayer" parent="."]
anims/freeze = SubResource( 8 )
anims/ouch = SubResource( 1 )
anims/pushback = SubResource( 2 )
anims/turn = SubResource( 3 )
anims/walk = SubResource( 4 )

[node name="ColPoly" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -32 )
z_index = 1
polygon = PoolVector2Array( -14, -8, 8, -8, 8, 32, -14, 32 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 6 )
position = Vector2( 0, -20 )
texture = ExtResource( 1 )
hframes = 10
vframes = 2

[node name="Area" type="Area2D" parent="."]

[node name="Col" type="CollisionShape2D" parent="Area"]
position = Vector2( -3, -41 )
shape = SubResource( 7 )

[node name="Vision" type="RayCast2D" parent="."]
position = Vector2( 0, -24 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 3

[node name="FloorcheckL" type="RayCast2D" parent="."]
position = Vector2( 7, 0 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="FloorcheckR" type="RayCast2D" parent="."]
position = Vector2( 25, 0 )
enabled = true
cast_to = Vector2( 0, 10 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
